--- a/roles/ISUCON-ubuntu/vars/main.yaml
+++ b/roles/ISUCON-ubuntu/vars/main.yaml
@@ -3,6 +3,6 @@ config_repository_name: ISUCON-config
 user_name: ubuntu 
 alp_version: v0.3.1
 download_path: /tmp
-percona_url:  
+percona_url:  https://www.percona.com/downloads/percona-toolkit/3.0.4/binary/debian/xenial/x86_64/percona-toolkit_3.0.4-1.xenial_amd64.deb
 APP_SERVICE_NAME: systemd.go.service 
 MYSQL_USERNAME: root
