--- a/isucon.yaml
+++ b/isucon.yaml
@@ -1,7 +1,7 @@
 - hosts: servers
   become: yes
   roles:
-    - ISUCON
+    - ISUCON-CentOS
   vars_prompt:
     - name: "github_user_name"
       prompt: "Please Enter Your ID of Github"
